# websocket_wanggou

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  makefile  test.json  websocket_client  websocket_client.c
include/: playlist.h  rooms.h  types.h
src/: playlist.c  playlist.h  rooms.c  rooms.h  types.h  websocket_service.c  websocket_service.h
